from .base import ActivationFunction

class ReLu(ActivationFunction): ...