from .base import ActivationFunction

class Sigmoid(ActivationFunction): ...