from .base import ActivationFunction

class SoftMax(ActivationFunction): ...