from .base import ActivationFunction

class Tanh(ActivationFunction): ...